<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pal_gz_description</name>
  <version>0.0.0</version>
  <description>SDFormat description files based on the ros_gz_example project template</description>
  <maintainer email="dheerusatya.01@gmail.com">Dheeraj Deevi</maintainer>
  <license>Apache 2.0</license>
  <author>Dheeraj Deevi</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
